--- a/index.html
+++ b/index.html
@@ -23,4 +23,27 @@
 							  firebase.analytics();
 							  console.log("Firebase Done.")
 							</script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDY0FOCZKMh3l705qyGf-QoTnbojH1zptw",
+    authDomain: "portfolio-4244f.firebaseapp.com",
+    databaseURL: "https://portfolio-4244f.firebaseio.com",
+    projectId: "portfolio-4244f",
+    storageBucket: "portfolio-4244f.appspot.com",
+    messagingSenderId: "243305304700",
+    appId: "1:243305304700:web:1a4ad290f17c527b6aeff9",
+    measurementId: "G-S70258TTGX"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
         </script></body></html>
